syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "com.github.xtwxy.scala.playground.journal.read"
  flat_package: true
};

message ReadJournalCommand {
    string id = 1;
    google.protobuf.Timestamp ts = 2;
};

message JournalEvent {
    string id = 1;
    google.protobuf.Timestamp ts = 2;
    int32 value = 3;
};

message JournalEvents {
    repeated JournalEvent events = 1;
};
